// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/overview/overviewproperties > renders 1`] = `
<div>
  <div
    className="ms-FocusZone css-118 ms-Pivot root-109"
    data-focuszone-id="FocusZone1"
    data-tabster="{"uncontrolled": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="tablist"
  >
    <button
      aria-selected={true}
      className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
      data-content="Workflow properties"
      data-is-focusable={true}
      id="Pivot0-Tab0"
      name="Workflow properties"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="tab"
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-120"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Pivot-linkContent linkContent-115"
        >
          <span
            className="ms-Pivot-text text-116"
          >
             
            Workflow properties
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="Pivot0-Tab0"
    className="itemContainer-110"
    hidden={false}
    role="tabpanel"
  >
    <div>
      <div
        className="msla-workflow-properties"
      >
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Name:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            name
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            State type:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            stateType
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview/overviewproperties > renders the callback URL property 1`] = `
<div>
  <div
    className="ms-FocusZone css-118 ms-Pivot root-109"
    data-focuszone-id="FocusZone16"
    data-tabster="{"uncontrolled": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="tablist"
  >
    <button
      aria-selected={true}
      className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
      data-content="Workflow properties"
      data-is-focusable={true}
      id="Pivot15-Tab0"
      name="Workflow properties"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="tab"
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-120"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Pivot-linkContent linkContent-115"
        >
          <span
            className="ms-Pivot-text text-116"
          >
             
            Workflow properties
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="Pivot15-Tab0"
    className="itemContainer-110"
    hidden={false}
    role="tabpanel"
  >
    <div>
      <div
        className="msla-workflow-properties"
      >
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Name:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            name
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            State type:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            stateType
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Callback URL:
          </span>
          <div>
            <a
              className="ms-Link root-128"
              href="callbackInfo.value"
              onClick={[Function]}
              rel="noopener"
              target="_blank"
            >
              callbackInfo.value
            </a>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview/overviewproperties > renders the operation options property 1`] = `
<div>
  <div
    className="ms-FocusZone css-118 ms-Pivot root-109"
    data-focuszone-id="FocusZone6"
    data-tabster="{"uncontrolled": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="tablist"
  >
    <button
      aria-selected={true}
      className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
      data-content="Workflow properties"
      data-is-focusable={true}
      id="Pivot5-Tab0"
      name="Workflow properties"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="tab"
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-120"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Pivot-linkContent linkContent-115"
        >
          <span
            className="ms-Pivot-text text-116"
          >
             
            Workflow properties
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="Pivot5-Tab0"
    className="itemContainer-110"
    hidden={false}
    role="tabpanel"
  >
    <div>
      <div
        className="msla-workflow-properties"
      >
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Name:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            name
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            State type:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            stateType
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Operation options:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            operationOptions
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/overview/overviewproperties > renders the stateless run mode property 1`] = `
<div>
  <div
    className="ms-FocusZone css-118 ms-Pivot root-109"
    data-focuszone-id="FocusZone11"
    data-tabster="{"uncontrolled": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="tablist"
  >
    <button
      aria-selected={true}
      className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
      data-content="Workflow properties"
      data-is-focusable={true}
      id="Pivot10-Tab0"
      name="Workflow properties"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="tab"
      type="button"
    >
      <span
        className="ms-Button-flexContainer flexContainer-120"
        data-automationid="splitbuttonprimary"
      >
        <span
          className="ms-Pivot-linkContent linkContent-115"
        >
          <span
            className="ms-Pivot-text text-116"
          >
             
            Workflow properties
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden={false}
    aria-labelledby="Pivot10-Tab0"
    className="itemContainer-110"
    hidden={false}
    role="tabpanel"
  >
    <div>
      <div
        className="msla-workflow-properties"
      >
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Name:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            name
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            State type:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            stateType
          </span>
        </label>
        <label
          className="ms-Label root-127"
        >
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            Stateless run mode:
          </span>
          <span
            className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
          >
            statelessRunMode
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
